2008-08-02  Alper KANAT  <alperkanat@gmail.com>

	* media/css/style.css, blog/admin.py, blog/models.py,
	templates/blog/detail.html, templates/blog/homepage.html: There is no longer
	image related fields in blog models..
	* blog/templatetags/blog_filters.py: If the post is no longer than
	predefined threshold (which is 1000) it won't print [...]
	* blog/models.py: Added a new method that returns the full address of the
	post..
	* blog/feeds.py, urls.py, templates/feeds/latest_title.html,
	templates/feeds/latest_description.html: We can now publish RSS content for
	blog posts.. Any other content can also be published..
	* templates/blog/detail.html: Fixed a little bug..
	
2008-07-28  Alper KANAT  <alperkanat@gmail.com>

	* blog/templatetags/blog_filters.py, extra/webcal.py: LocaleTextCalendar 
	can take locale as an extra parameter so that it works correct on almost
	every platform.

2008-07-23  Alper KANAT  <alperkanat@gmail.com>

	* blog/admin.py, comments/admin.py: Corrected some syntax errors and
	missing imports..
	* frontpage/admin.py, frontpage/models.py: Forgot to add the inline forms
	for the links model..
	* blog/admin.py, frontpage/admin.py, comments/admin.py, tags/admin.py:
	Created admin interfaces for some of the applications.. class Admin in
	models.py is no longer used..
	* blog/models.py, frontpage/models.py, comments/models.py, tags/models.py:
	Removed some obsolote code that has been changed with the admin
	interface..
	* urls.py: Admin site is now imported from elsewhere..
	* raptiye: This shouldn't be in the code base..
	
2008-07-20  Alper KANAT  <alperkanat@gmail.com>

	* Committing the project to its own server for the first time..

2008-07-16  Alper KANAT  <alperkanat@gmail.com>

	* extra/tag_cloud.py: Fixed a small bug that occurs when a small number of
	tags exist.
	* templates/users/profile.html: Profile avatar shows the gravatar when
	gravatar url entered.

2008-07-08  Alper KANAT  <alperkanat@gmail.com>
