@@ -30,10 +30,6 @@ class Entry(models.Model):
 	def published_comments(self):
 		"Returns the published comments"
 		return self.comments_set.filter(published=True)
-
-	def get_url(self):
-		dt = self.datetime
-		return "/blog/%s" % "/".join([dt.year.__str__(), dt.month.__str__(), dt.day.__str__()]) + "/" + self.slug
 	
 	def get_full_url(self):
 		site_url = Site.objects.get_current().domain
@@ -46,8 +42,7 @@ class Entry(models.Model):
 	get_datetime.short_description = "Event Published On"
 
 	def get_entry_url(self):
-		site_url = Site.objects.get_current().domain
-		entry_url = "http://%s/%s/%s/" % (site_url, self.datetime.strftime("%Y/%m/%d"), self.slug)
+		entry_url = "/%s/%s/" % (self.datetime.strftime("%Y/%m/%d"), self.slug)
 		return "<a href='%s' title='Click here to read the entry..' target='_blank'>%s</a>" % (entry_url, entry_url)
 	
 	get_entry_url.short_description = "URL of Entry"
