@@ -86,7 +86,7 @@
 				</tr>
 				{% for comment in latest_comments %}
 				<tr>
-					<td><a href="{{ comment.entry.get_url }}" 
+					<td><a href="{% url blog_entry comment.entry.datetime.year,comment.entry.datetime.month,comment.entry.datetime.day,comment.entry.slug %}" 
 							title="yazıyı okumak için tıkla.." class="ulink">{{ comment.entry.title }}</a></td>
 					<td class="aligncenter">{{ comment.datetime|date:"d.m.Y" }}</td>
 					<td class="aligncenter">{{ comment.entry.comments_set.count }}</td>
@@ -105,7 +105,7 @@
 				</tr>
 				{% for comment in watched_comments %}
 				<tr>
-					<td><a href="{{ comment.entry.get_url }}" 
+					<td><a href="{% url blog_entry comment.entry.datetime.year,comment.entry.datetime.month,comment.entry.datetime.day,comment.entry.slug %}" 
 							title="yazıyı okumak için tıklayın.." class="ulink">{{ comment.entry.title }}</a></td>
 					<td class="aligncenter">
 						<a href="#" title="bu yazıyı takip etmek istemiyorsanız tıklayın.." 
@@ -120,7 +120,7 @@
 	<script language="javascript">
 		$("#get_gravatar").click(function() {
 			// requesting the gravatar url
-			$.post("{{ request.path }}gravatar/", {"email": $("#gravatar_email").val()}, function(resp) {
+			$.post("{% url gravatar_request request.user.username %}", {"email": $("#gravatar_email").val()}, function(resp) {
 				$("#profile_avatar img").attr("src", resp);
 				$("#id_avatar").val(resp);
 				iBox.hide();
@@ -137,7 +137,7 @@
 			$("#watched_comments td").each(function() {
 				$(this).remove();
 			});
-			$.get("{{ request.path }}notification/remove/", {"id": id}, function(resp) {
+			$.get("{% url notification_removal request.user.username %}", {"id": id}, function(resp) {
 				// populate the list again..
 				if (resp.status == 1) {
 					alert("error");
